Others/kube-router/dni-function.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dni
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dni-function
  namespace: dni
spec:
  replicas: 1
  template:
    metadata:
      namespace: dni
      labels:
        app: dni-function
    spec:
      containers:
      - name: dni-function
        image: cmendibl3/dni:1.0.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dni-function
  namespace: dni
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 80
  selector:
    app: dni-function
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dni-function
  namespace: dni
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: dni-function.fa8099db08164c778315.eastus2.aksapp.io
    http:
      paths:
      - backend:
          serviceName: dni-function
          servicePort: 80
        path: /
