Others/kube-router/party-clippy-allow-internal.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: party-clippy-allow-internal
spec:
  podSelector:
    matchLabels:
      app: party-clippy
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: internal
