Others/kube-router/party-clippy-deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: party
  name: party-clippy-deny-all
spec:
  ipBlock:  
  podSelector:
    matchLabels:
      namespace: party
      app: party-clippy
  ingress: []
