Others/kube-router/product-service-allow-external.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-external
  namespace: product
spec:
  podSelector:
    matchLabels:
      app: new-product-service-kvflex
  ingress:
  - ports:
    - port: 80
    - port: 443
  - from: 
    - ipBlock:
      cidr: 40.70.128.221/31
